--- a/assets/style.css
+++ b/assets/style.css
@@ -35,7 +35,7 @@ body {
 .cartao__conteudo h3 {
     color: var(--text-color);
     border: 1px solid var(--text-color);
-    text-align: left;
+    text-align: center;
     padding: 0.5rem;
     position: absolute;
     margin: 0.6rem;
@@ -75,7 +75,6 @@ body {
 }
 
 .cartao__conteudo__pergunta {
-    /* Adiciona fundo ao cartão da pergunta */
     background-color: var(--card-front-color);
 }
 
@@ -132,33 +131,33 @@ footer p {
 }
 #form-cartao {
     display: flex;
-    flex-direction: column; /* Alinha os itens verticalmente */
-    gap: 1rem; /* Espaçamento entre os itens do formulário */
-    margin: 2rem; /* Margem ao redor do formulário */
-    padding: 1rem; /* Padding interno */
-    background-color: rgba(255, 255, 255, 0.9); /* Fundo branco com leve transparência */
-    border-radius: 8px; /* Bordas arredondadas */
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); /* Sombra para dar profundidade */
+    flex-direction: column;
+    gap: 1rem;
+    margin: 2rem;
+    padding: 1rem;
+    background-color: rgba(255, 255, 255, 0.9);
+    border-radius: 8px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 }
 
 #form-cartao input {
-    padding: 10px; /* Espaçamento interno */
-    border: 2px solid var(--card-front-color); /* Borda colorida */
-    border-radius: 5px; /* Bordas arredondadas */
-    font-size: 1rem; /* Tamanho da fonte */
-    transition: border-color 0.3s; /* Transição suave para a cor da borda */
+    padding: 10px;
+    border: 2px solid var(--card-front-color);
+    border-radius: 5px;
+    font-size: 1rem;
+    transition: border-color 0.3s;
 }
 
 #form-cartao input:focus {
-    outline: none; /* Remove a borda padrão */
-    border-color: var(--card-back-color); /* Muda a cor da borda ao focar */
+    outline: none;
+    border-color: var(--card-back-color);
 }
 
 #form-cartao button {
-    padding: 10px; /* Espaçamento interno */
-    background-color: var(--card-back-color); /* Cor de fundo */
-    color: white; /* Cor do texto */
-    border: none; /* Remove a borda */
+    padding: 10px;
+    background-color: var(--card-back-color);
+    color: white;
+    border: none;
     border-radius: 5px; 
     cursor: pointer; 
     font-size: 1rem; 
@@ -168,3 +167,11 @@ footer p {
 #form-cartao button:hover {
     background-color: #00d8a1; 
 }
+.categoria {
+    position: relative;
+    color: var(--text-color);
+    font-size: 1.2rem;
+    margin-bottom: 1rem;
+    z-index: 2;
+}
+
